--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Document</title>
     <style>
-        .black{
+        .black {
             background-color: black;
         }
-        .white{
+
+        .white {
             background-color: white;
         }
-        .border{
+
+        .border {
             border: 1px solid black;
             background-color: solid black;
             width: 25px;
-            height: 25px ;
+            height: 25px;
         }
-        .table{
+
+        .table {
             width: 250px;
         }
-        
     </style>
 </head>
+
 <body>
+    <h1 style="text-align: center;"><b><i>Chess Board</i></b></h1>
     <table class="table" align="center">
         <tr style="text-align: center;">
             <td> </td>
@@ -111,7 +116,7 @@
             <td class="border"></td>
             <td class="black" class="border"></td>
         </tr>
-        <tr >
+        <tr>
             <td>1</td>
             <td class="black" class="border"></td>
             <td class="border"></td>
@@ -120,9 +125,10 @@
             <td class="black" class="border"></td>
             <td class="border"></td>
             <td class="black" class="border"></td>
-            <td class="border" ></td>
-        </tr >
+            <td class="border"></td>
+        </tr>
     </table>
-    
+
 </body>
+
 </html>
