--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
             background-color: white;
         }
 
-        .border {
+        #border {
             border: 1px solid black;
             background-color: solid black;
-            width: 25px;
-            height: 25px;
+            width: 22px;
+            height: 20px;
         }
 
-        .table {
+        table {
             width: 250px;
+        }
+        td{
+            border: 1px solid black;
         }
     </style>
 </head>
 
-<body>
+<body >
     <h1 style="text-align: center;"><b><i>Chess Board</i></b></h1>
     <table class="table" align="center">
         <tr style="text-align: center;">
@@ -41,91 +44,91 @@
         </tr>
         <tr>
             <td>8</td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
         </tr>
         <tr>
             <td>7</td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
         </tr>
         <tr>
             <td>6</td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
         </tr>
         <tr>
             <td>5</td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
         </tr>
         <tr>
             <td>4</td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
         </tr>
         <tr>
             <td>3</td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
         </tr>
         <tr>
             <td>2</td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
         </tr>
         <tr>
             <td>1</td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
-            <td class="black" class="border"></td>
-            <td class="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
+            <td class="black" id="border"></td>
+            <td class="white" id="border"></td>
         </tr>
     </table>
 
